--- a/src/app/blog-list-entry/blog-list-entry.component.html
+++ b/src/app/blog-list-entry/blog-list-entry.component.html
@@ -4,8 +4,9 @@
         <div class="space-y-2 xl:grid xl:grid-cols-4 xl:items-baseline xl:space-y-0">
             <dl>
                 <dt class="sr-only">Published on</dt>
-                <dd class="text-base font-medium leading-6 text-gray-500 dark:text-gray-400">
-                    <time datetime="2023-08-05T00:00:00.000Z">August 5, 2023</time>
+                <dd class="text-base font-medium leading-6 text-gray-500">
+                    <time [attr.datetime]="post.attributes.date | date">{{ post.attributes.date | date: "dd.MM.YY" }}
+                    </time>
                 </dd>
             </dl>
             <div class="space-y-5 xl:col-span-3">
