--- a/src/styles/custom-markdown-theme.scss
+++ b/src/styles/custom-markdown-theme.scss
@@ -1,10 +1,6 @@
 /* Variables for easy customization */
 $font-main: "Onest", sans-serif;
 $color-primary: #daa420; // Accent color
-$color-secondary: #bbbbbb; // Secondary text color
-$color-background: #121212; // Dark background
-$color-text: #e0e0e0; // Light text color
-$color-code-bg: #1e1e1e; // Dark background for code blocks
 $shadow-card: 0 2px 10px rgba(0, 0, 0, 0.5);
 $radius: 8px;
 
@@ -20,18 +16,19 @@ $radius: 8px;
         margin-top: 0;
         margin-bottom: 1rem;
     }
-    
+
     /* Headings */
     h1,
     h2,
     h3 {
         font-family: $font-main;
         font-weight: 700;
-        color: $color-text;
+        @apply text-gray-900;
+        @apply dark:text-gray-100;
         margin: 1.5rem 0 1rem;
         line-height: 1.4;
     }
-    
+
     h1 {
         margin: 0.67em 0;
         padding-bottom: 0.3em;
@@ -39,22 +36,23 @@ $radius: 8px;
         color: $color-primary;
         border-bottom: 1px solid transparentize($color-primary, 0.8);
     }
-    
+
     h2 {
         padding-bottom: 0.3em;
         font-size: 1.5em;
         border-bottom: 1px solid #3d444db3;
     }
-    
+
     h3 {
         font-size: 1.25rem;
-        color: $color-secondary;
+        @apply text-gray-900;
+        @apply dark:text-gray-100;
     }
-    
+
     h4 {
         font-size: 1em;
     }
-    
+
     h5 {
         font-size: 0.875em;
     }
@@ -174,18 +172,20 @@ $radius: 8px;
         border-left: 2px solid $color-primary;
         margin: 1rem 0;
         padding: 0.5rem 1rem;
-        background: rgba(255, 255, 255, 0.075);
-        color: $color-secondary;
+        @apply bg-black/[0.075];
+        @apply dark:bg-white/[0.075];
+        @apply text-gray-500;
+        @apply dark:text-gray-200;
         font-style: italic;
     }
     
     /* Code */
     pre:not(.shiki) {
         font-family: "Courier New", monospace;
-        background: $color-code-bg;
+        @apply bg-[#e1e1e1];
+        @apply dark:bg-[#1e1e1e];
         padding: 0.2rem 0.4rem;
         border-radius: $radius;
-        //color: darken($color-primary, 20%);
     }
     
     pre {
@@ -225,7 +225,9 @@ $radius: 8px;
         th,
         td {
             padding: 6px 13px;
-            border: 1px solid #3d444d;
+            @apply border border-solid;
+            @apply border-[#c2bbb2];
+            @apply dark:border-[#3d444d];
         }
         
         td > :last-child {
@@ -233,12 +235,17 @@ $radius: 8px;
         }
         
         tr {
-            background-color: #0d1117;
-            border-top: 1px solid #3d444db3;
+            @apply bg-[#f2eee8];
+            @apply dark:bg-[#0d1117];
+            
+            @apply border border-solid;
+            @apply border-[#bbb24cb3];
+            @apply dark:border-[#3d444db3];
         }
         
         tr:nth-child(2n) {
-            background-color: #151b23;
+            @apply bg-[#eae4dc];
+            @apply dark:bg-[#151b23];
         }
         
         img {
@@ -257,8 +264,9 @@ $radius: 8px;
     
     /* Horizontal Rules */
     hr {
-        border: none;
-        border-top: 1px solid lighten($color-text, 40%);
+        @apply border border-solid;
+        @apply border-gray-300;
+        @apply dark:border-gray-700;
         margin: 2rem 0;
     }
 }
