--- a/src/styles/markdown-content.scss
+++ b/src/styles/markdown-content.scss
@@ -1,2 +1,2 @@
 //@import 'https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown.css';
-@import './custom-markdown-theme.scss';
+@use './custom-markdown-theme.scss';
