--- a/src/styles/custom-markdown-theme.scss
+++ b/src/styles/custom-markdown-theme.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 /* Variables for easy customization */
 $font-main: "Onest", sans-serif;
 $color-primary: #daa420; // Accent color
@@ -34,7 +36,8 @@ $radius: 8px;
         padding-bottom: 0.3em;
         font-size: 2em;
         color: $color-primary;
-        border-bottom: 1px solid transparentize($color-primary, 0.8);
+        border-bottom: 1px solid color.adjust($color-primary, $alpha: -0.8)
+    ;
     }
 
     h2 {
@@ -162,8 +165,8 @@ $radius: 8px;
         transition: all 0.2s;
 
         &:hover {
-            color: darken($color-primary, 10%);
-            border-bottom: 1px solid darken($color-primary, 10%);
+            color: color.adjust($color-primary, $lightness: -10%);
+            border-bottom: 1px solid color.adjust($color-primary, $lightness: -10%);
         }
     }
 
