--- a/src/styles/custom-markdown-theme.scss
+++ b/src/styles/custom-markdown-theme.scss
@@ -69,6 +69,11 @@ $radius: 8px;
         margin: 1rem 0;
     }
 
+    em {
+        font-style: italic;
+        font-family: sans-serif;
+    }
+
     /* Lists */
     ul,
     ol {
