httpResource article update

--- a/src/styles/custom-markdown-theme.scss
+++ b/src/styles/custom-markdown-theme.scss
@@ -206,6 +206,10 @@ $radius: 8px;
         border-radius: 6px;
     }
 
+    code {
+        background: red;
+    }
+
     /* Tables */
     table {
         display: block;
