--- a/src/styles/custom-markdown-theme.scss
+++ b/src/styles/custom-markdown-theme.scss
@@ -2,6 +2,7 @@
 
 /* Variables for easy customization */
 $font-main: "Onest", sans-serif;
+$font-text: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 $color-primary: #daa420; // Accent color
 $shadow-card: 0 2px 10px rgba(0, 0, 0, 0.5);
 $radius: 8px;
@@ -17,6 +18,7 @@ $radius: 8px;
     details {
         margin-top: 0;
         margin-bottom: 1rem;
+        font-family: $font-text;
     }
 
     /* Headings */
@@ -206,8 +208,16 @@ $radius: 8px;
         border-radius: 6px;
     }
 
-    code {
-        background: red;
+    p {
+        code {
+            @apply bg-black/[0.075];
+            @apply dark:bg-white/[0.075];
+            padding: .2em .4em;
+            margin: 0;
+            font-size: 85%;
+            white-space: break-spaces;
+            border-radius: 6px;
+        }
     }
 
     /* Tables */
